<resources>
    <string name="app_name">PIB_V2</string>
    <string name="menu1">E-learning</string>
    <string name="menu2">Notice Board</string>
    <string name="menu3">Digital Publication</string>
    <string name="menu4">Gallery</string>
    <string name="menu5">News Clip</string>
    <string name="menu6">About us</string>
    <string name="row_2">Sl no.</string>
    <string name="row_3">Publish Date</string>
    <string name="heading">Feature Class</string>
    <string name="heading1">Class 1:Advance Java</string>
    <string name="heading2">Class 1:Android Development</string>
    <string name="welcome_msg">Welcome to Press Institute Of Bangladesh</string>

    <string-array name="video_id_array">
        <item>CqhpNxI8qYw</item>
        <item>sasCrpgHDy8</item>
        <item>iJeh3x09Ya8</item>
        <item>B5zRaD7B504</item>
        <item>9qWHzj8k-Uo</item>
        <item>RjiK45wC924</item>
        <item>RH3zaLO8H4E</item>
        <item>o14pyzosjvk</item>
        <item>5SQrpBQne7A</item>
        <item>5WJ3r67ORxo</item>
    </string-array>

    <string-array name="video_title_array">
        <item>Android Security Lock Demo</item>
        <item>Android Sectioned RecyclerView Demo</item>
        <item>Android Home Screen Widgets Demo</item>
        <item>Android Floating Widget like Facebook Messenger Chat Head Demo</item>
        <item>Android Google Maps Introduction Demo</item>
        <item>Android Lollipop Activity Transitions Demo</item>
        <item>Android Toolbar Animation Using Design Support Library Demo</item>
        <item>Android Material Advance Tabs Demo</item>
        <item>Android Drag and Drop Demo</item>
        <item>Android Fingerprint Authentication Demo</item>
    </string-array>

    <string-array name="video_duration_array">
        <item>02:48</item>
        <item>00:44</item>
        <item>01:01</item>
        <item>00:55</item>
        <item>01:03</item>
        <item>00:25</item>
        <item>00:34</item>
        <item>00:45</item>
        <item>00:52</item>
        <item>00:28</item>
    </string-array>

</resources>
