<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landing_back"
    tools:context=".LearningActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="121dp"
        android:layout_height="118dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/white_logo" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/welcome_msg"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="395dp"
        android:layout_height="411dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <TableLayout
            android:layout_width="399dp"
            android:layout_height="268dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.181"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow
                android:id="@+id/row_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">

                <ImageButton
                    android:id="@+id/elearningBtn"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/study" />

                <ImageButton
                    android:id="@+id/noticeBtn"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/icon" />

                <ImageButton
                    android:id="@+id/publishBtn"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/openbook" />

            </TableRow>

            <TableRow
                android:id="@+id/row_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/menu1"
                    android:textColor="#fff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/menu2"
                    android:textColor="#fff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/menu3"
                    android:textStyle="bold"
                    android:textColor="#fff" />
            </TableRow>

            <TableRow
                android:id="@+id/row_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageButton
                    android:id="@+id/galleryBtn"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/attach" />

                <ImageButton
                    android:id="@+id/newsclipBtn"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/menu" />

                <ImageButton
                    android:id="@+id/aboutBtn"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/contact" />

            </TableRow>

            <TableRow
                android:id="@+id/row_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/menu4"
                    android:textColor="#fff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/menu5"
                    android:textColor="#fff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/menu6"
                    android:textColor="#fff" />
            </TableRow>


        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>